	- [roms]  $2735: commit font change to all of the debugger windows
	- [roms]  $2737: added accelerator keys to toggle sr flags in the regs window
	- [roms]  $2738: register window uses courier font when no font is selected (restored previous behaviour)
	- [roms]  $2744: (try and) fix bug about management of AI3 on HW2 under TiEmu
	
- 07/09/2007, version 3.01b:
  - re-released due to missing USB drivers (libusb0.dll)
  				=> released on 07/09/2007

- 03/09/2007, version 3.01a:
	- re-released due to missing file in Windows Installer (dhahelper.sys)
	- includes latest ticables2 library with USB polling support
	- [kevin] $2642: fixed bit toggling in register window
	        => released on 04/09/2007
	
- 20/06/2007, version 3.01:
	$2556: Merged changes from tiemu-3-sound branch:
	- [hypersonic] $2509-2513: implemented low-level SDL code for sound emulation
	- [kevin] $2515: added configure checks for SDL and --disable-sound configure option
	- [kevin] $2520: added "Emulate sound" checkbox to the popup menu
	- [kevin] $2527: cleaned up time handling (using gettimeofday everywhere, Win32 implementation taken from kdewin32,
	                 not incorrectly attempting to measure wall clock time with clock() anymore)
	- [kevin] $2531: filter out yet another junk parameter (LIBS=...) passed to subdir configure from yet another autoconf
	                 version upgrade (2.61) (fixes MinGW build with regenerated configure)
	- [kevin] $2537: implemented sound emulation in the CPU emulation loop
	- [kevin] $2538: only define _GNU_SOURCE in src/core/uae/sysdeps.h if not already defined
	Note: trunk forked into tiemu-3-sound branch at rev. $2507
	- [roms]  $2571: changed some function names (sound emulation) to follow TiEmu function naming scheme
	- [roms]  $2572: changed one function in dbus.c to follow ticonv API changes. Major number requirements updated consequently.
	- [roms]  $2591: speed-up displaying of code window by populating ROM calls early